添加消息敏感词过滤功能
- 完善ModerationService，支持敏感词检测和过滤
- 在MessageService中集成敏感词过滤，发送消息前进行验证
- 前端添加敏感词预检查工具，提前提示用户
- 支持常见变体字符检测（如：色*情、色-情等）
- 包含色情、赌博、毒品、政治、暴力、诈骗等敏感词库

# 改动的文件:
# - miniapp-backend/src/main/java/com/stylemirror/miniapp_backend/service/MessageService.java
# - miniapp-backend/src/main/java/com/stylemirror/miniapp_backend/service/ModerationService.java
# - miniapp-frontend/pages/message/message.js
# - miniapp-frontend/utils/sensitiveWordFilter.js